Поправлен кальккулятор добавлен адаптив в заголовок h2

--- a/css/header.css
+++ b/css/header.css
@@ -34,6 +34,10 @@
     @media (max-width: 770px) {
       .header .header_nav {
         width: 50%; } }
+    @media (max-width: 357px) {
+      .header .header_nav {
+        width: 100%;
+        text-align: center; } }
     .header .header_nav nav {
       float: right; }
       @media (max-width: 1009px) {
@@ -90,11 +94,19 @@
       @media (max-width: 568px) {
         .header .header_nav_logo_line {
           background: none; } }
+      @media (max-width: 357px) {
+        .header .header_nav_logo_line {
+          width: 100%;
+          text-align: center; } }
       .header .header_nav_logo_line_logo {
         float: left; }
         @media (max-width: 568px) {
           .header .header_nav_logo_line_logo {
             margin-top: 5px; } }
+        @media (max-width: 357px) {
+          .header .header_nav_logo_line_logo {
+            float: none;
+            display: inline-block; } }
         .header .header_nav_logo_line_logo span {
           display: none; }
         .header .header_nav_logo_line_logo .logo_mini {
@@ -329,6 +341,13 @@
             float: right;
             text-align: right;
             max-width: 180px; } }
+        @media (max-width: 357px) {
+          .header .header_kontakt_line .meil {
+            display: block;
+            margin: 5px auto;
+            width: 100%;
+            max-width: 180px;
+            float: none; } }
         .header .header_kontakt_line .meil p {
           width: 100%;
           font: 13px/20px Verdana;
@@ -378,6 +397,13 @@
             max-width: 160px;
             font-size: 11px;
             cursor: pointer; } }
+        @media (max-width: 357px) {
+          .header .header_kontakt_line .ring {
+            display: block;
+            margin: 5px auto;
+            width: 100%;
+            max-width: 180px;
+            float: none; } }
         .header .header_kontakt_line .ring:hover i {
           background: url("../img/temp_hover/arow_hover.png"); }
         .header .header_kontakt_line .ring i {
@@ -452,6 +478,10 @@
     @media (max-width: 770px) {
       .header__user_info {
         width: 50%; } }
+    @media (max-width: 357px) {
+      .header__user_info {
+        width: 100%;
+        text-align: center; } }
     .header__user_info_product_line {
       width: 100%;
       float: left; }
@@ -522,6 +552,10 @@
         @media (max-width: 1009px) {
           .header__user_info_info .time {
             float: right; } }
+        @media (max-width: 357px) {
+          .header__user_info_info .time {
+            display: inline-block;
+            float: none; } }
         .header__user_info_info .time .timer {
           position: absolute;
           width: 270px;
@@ -695,16 +729,23 @@
   top: 0px;
   left: 0px;
   z-index: 9999; }
+  @media (max-width: 375px) {
+    .header_mini {
+      height: 40px; } }
   .header_mini .header_nav {
     width: 35.5%;
     float: left; }
     @media (max-width: 1106px) {
       .header_mini .header_nav {
         width: 50%; } }
+    @media (max-width: 1007px) {
+      .header_mini .header_nav {
+        width: 100%; } }
     @media (max-width: 636px) {
       .header_mini .header_nav {
         width: 100%;
-        margin-left: 0px; } }
+        margin-left: 0px;
+        position: relative; } }
     .header_mini .header_nav nav {
       display: none; }
     .header_mini .header_nav .header_nav_sandwich {
@@ -757,6 +798,11 @@
       width: auto;
       float: left;
       background: none; }
+      @media (max-width: 1007px) {
+        .header_mini .header_nav .header_nav_logo_line {
+          float: right; } }
+      .header_mini .header_nav .header_nav_logo_line .logo_mini {
+        display: none; }
       @media (max-width: 1009px) {
         .header_mini .header_nav .header_nav_logo_line .logo_mini {
           display: none; } }
@@ -817,6 +863,9 @@
         padding-left: 7px;
         box-sizing: border-box;
         letter-spacing: 0.6px; }
+        @media (max-width: 1007px) {
+          .header_mini .header_nav .header_nav_katalog .all_mini {
+            display: none; } }
         .header_mini .header_nav .header_nav_katalog .all_mini:hover {
           color: #b80000; }
         .header_mini .header_nav .header_nav_katalog .all_mini:before {
@@ -867,6 +916,9 @@
     @media (max-width: 405px) {
       .header_mini .header_kontakt_line {
         text-align: center; } }
+    @media (max-width: 375px) {
+      .header_mini .header_kontakt_line {
+        margin-top: -35px; } }
     .header_mini .header_kontakt_line .ring {
       float: left;
       width: auto;
@@ -900,6 +952,9 @@
         .header_mini .header_kontakt_line .meil {
           float: none;
           display: inline-block; } }
+      @media (max-width: 375px) {
+        .header_mini .header_kontakt_line .meil {
+          display: none; } }
       .header_mini .header_kontakt_line .meil p {
         display: none; }
       .header_mini .header_kontakt_line .meil .icon-mail_header {
@@ -919,3 +974,6 @@
       display: none; }
     .header_mini .header__user_info .basket {
       margin-right: 5px; }
+  @media (max-width: 1007px) {
+    .header_mini .header__user_info_product_line {
+      display: none; } }
