--- a/css/price.css
+++ b/css/price.css
@@ -997,6 +997,7 @@
           float: left;
           width: 100%;
           padding-left: 21px;
+          padding-right: 21px;
           background: #ebf0f7;
           margin-top: 12px;
           box-sizing: border-box; }
