--- a/sass/price.scss
+++ b/sass/price.scss
@@ -1265,6 +1265,7 @@
           float: left;
           width: 100%;
           padding-left: 21px;
+          padding-right: 21px;
           background: #ebf0f7;
           margin-top: 12px;
           box-sizing: border-box;
