Собран спрайт переписаны ховеры стрелок

--- a/css/modal.css
+++ b/css/modal.css
@@ -1407,13 +1407,11 @@
     .comment_block .individuals_block .slick-prev {
       left: -5px; }
       .comment_block .individuals_block .slick-prev:hover {
-        background-image: url("../img/temp_hover/prev_hover.png");
-        background-position: center; }
+        background-position: -39px -202px; }
     .comment_block .individuals_block .slick-next {
       right: -5px; }
       .comment_block .individuals_block .slick-next:hover {
-        background-image: url("../img/temp_hover/next_hover.png");
-        background-position: center; }
+        background-position: 0px -202px; }
     .comment_block .individuals_block_slide {
       width: 100%;
       float: left;
@@ -1635,13 +1633,11 @@
     .comment_block .entity_wrap .slick-prev {
       left: -5px; }
       .comment_block .entity_wrap .slick-prev:hover {
-        background-image: url("../img/temp_hover/prev_hover.png");
-        background-position: center; }
+        background-position: -39px -202px; }
     .comment_block .entity_wrap .slick-next {
       right: -5px; }
       .comment_block .entity_wrap .slick-next:hover {
-        background-image: url("../img/temp_hover/next_hover.png");
-        background-position: center; }
+        background-position: 0px -202px; }
     .comment_block .entity_wrap .entity_icon {
       width: 32px;
       height: 26px;
