--- a/sass/comment.scss
+++ b/sass/comment.scss
@@ -86,16 +86,14 @@
     .slick-prev{
       left: -5px;
       &:hover{
-        background-image: url("../img/temp_hover/prev_hover.png");
-        background-position: center;
+        background-position: -39px -202px;
       }
 
     }
     .slick-next{
       right: -5px;
       &:hover{
-        background-image: url("../img/temp_hover/next_hover.png");
-        background-position: center;
+        background-position: 0px -202px;
       }
     }
     &_slide{
@@ -370,16 +368,14 @@
     .slick-prev{
       left: -5px;
       &:hover{
-        background-image: url("../img/temp_hover/prev_hover.png");
-        background-position: center;
+        background-position: -39px -202px;
       }
 
     }
     .slick-next{
       right: -5px;
       &:hover{
-        background-image: url("../img/temp_hover/next_hover.png");
-        background-position: center;
+       background-position: 0px -202px;
       }
     }
     .entity_icon{
